--- a/XBlas/XBlas.vcxproj
+++ b/XBlas/XBlas.vcxproj
@@ -20,16 +20,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Architecture.hpp" />
-    <ClInclude Include="Include\Array.cuh" />
+    <ClInclude Include="Include\Vector.cuh" />
     <ClInclude Include="Include\CudaManager.cuh" />
     <ClInclude Include="Include\Matrix.cuh" />
     <ClInclude Include="Include\MatrixColumn.cuh" />
     <ClInclude Include="Include\MemoryBuffer.cuh" />
     <ClInclude Include="Include\MemoryLayout.cuh" />
     <ClInclude Include="Include\ObjectPool.cuh" />
-  </ItemGroup>
-  <ItemGroup>
-    <CudaCompile Include="Source\Array.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\All.cpp" />
@@ -128,7 +125,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>cudart.lib;cublas.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>cudart.lib;cublas.lib;cusolver.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>echo copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"
@@ -171,7 +168,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>cudart.lib;cublas.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>cudart.lib;cublas.lib;cusolver.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>echo copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"
